<resources>
    <string name="app_name">Diet Plan</string>
    <string name="app_sub_name">BMI Calculator And Fitness Videos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="scheme">http</string>
    <string name="host">www.viaviweb.in</string>
    <string name="pathPrefix">/envato/cc/android_diet_plan_app_demo/</string>

    <string name="get_scheme">diet</string>
    <string name="get_host">diet_plan_app</string>
    <string name="get_pathPrefix">/</string>

    <string name="isRTL">false</string>

    <string name="facebook_app_id">xxxxxxxxxxxxxx</string>
    <string name="fb_login_protocol_scheme">xxxxxxxxxxxxxx</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="applovin_id">FBZJ_asd3dawdalc8JBmasdsadashVk_M0k-asdasdsad1A2Vasdasd3wqC6yasdds0N2</string>

    <string name="play_more_app">https://play.google.com/store/apps/dev?id=7157478532572017100</string>

    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="recentView_diet">Recent View Diet</string>
    <string name="recentView_video">Recent View Fitness Video</string>
    <string name="favourite">Favourite</string>
    <string name="bmi_calculator">Bmi Calculator</string>
    <string name="diet_plan">Diet plan</string>
    <string name="fitness_video">Fitness Video</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms condition</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>

    <string name="ok">Ok</string>
    <string name="exit">Exit</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading....</string>
    <string name="no_data_found">No data found</string>
    <string name="failed_try_again">Failed try again</string>
    <string name="you_have_not_login">You Have Not Login</string>
    <string name="logout_message">Are you sure you want to logout</string>
    <string name="wrong">Something went to wrong please try again later</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="storage_permission">Please allow storage permission</string>
    <string name="upload_folder_error">Select from file manager then it will work</string>
    <string name="Please_click_BACK_again_to_exit">Please click back again to exit</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>

    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">1.0</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">abcd</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">abcd@abcd.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.abcd.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 (123) (456) (5678)</string>
    <string name="about_us_about">About</string>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie.
    </string>

    <string name="welcome_back">Welcome back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform password</string>
    <string name="phoneNo">Phone No</string>
    <string name="remember_me">Remember Me</string>
    <string name="skip">Skip</string>
    <string name="button_text_login">LOGIN</string>
    <string name="google_login">Gmail login</string>
    <string name="facebook_login">Facebook login</string>
    <string name="terms_title">I have read and agree to the</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="already_have_an_account_yet">Already have an account yet?</string>
    <string name="send">Send</string>
    <string name="forget_password"><![CDATA[Forget password?]]></string>
    <string name="forget_password_text">Enter your email address below and we\'ll send you email with instructions on how to change your password</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_phone">Please enter phone no</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_select_terms">Please select terms and condition option</string>
    <string name="password_not_match">Password and confirm password does not match</string>

    <string name="home_category">CATEGORIES</string>
    <string name="home_recentView_diet">RECENT VIEW DIET</string>
    <string name="home_recentView_video">RECENT VIEW FITNESS VIDEO</string>
    <string name="view_all">View All</string>
    <string name="search_diet">Search Diet Plan</string>
    <string name="please_enter_keyWord">Please enter keyword</string>

    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_pass">Change password</string>
    <string name="change_password_pro">Change Password</string>
    <string name="remove_image">Remove Image</string>
    <string name="gallery">Gallery</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_conform_password">New Conform Password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_new_confirm_password">Please enter new confirm password</string>
    <string name="new_password_not_match">New Password and new confirm password does not match</string>

    <string name="share">Share</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="calculate_bmi">Calculate Bmi</string>
    <string name="please_select_height">Please select height</string>
    <string name="please_select_weight">Please select weight</string>
    <string name="bmi_result">Bmi Calculator Result</string>
    <string name="your_bmi_score">Your BMI Score</string>
    <string name="try_again">Try Again</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="Underweight">Underweight</string>
    <string name="Normal">Normal</string>
    <string name="Overweight">Overweight</string>
    <string name="Obese">Obese</string>
    <string name="bmi">Bmi</string>
    <string name="view">View</string>
    <string name="bmi_title_pro">Bmi Calculated History</string>
    <string name="bmi_submit_fail_message">Your bmi calculated history are not saved but your bmi is calculated successfully please press ok button</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_bmi_history_msg">Are you sure you want to delete bmi history</string>

    <string name="faq">Faq</string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact Us</string>

    <string name="enable_push_notification">Enable push notification</string>
    <string name="subject">Subject</string>
    <string name="your_message">Your Message</string>
    <string name="please_enter_message">please enter message</string>
    <string name="select_contact_type">Select contact type</string>
    <string name="please_select_contact_type">Please select contact type</string>
    <string name="contact_detail">Please enter your contact details and admin will soon contact you.</string>
    <string name="them">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="Ok_them">OK</string>
    <string name="Cancel_them"><![CDATA[CANCEL]]></string>
    <string name="choose_one">Choose one</string>
    <string name="delete">Delete</string>

</resources>
