<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/categories"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favourite" />
        <item
            android:id="@+id/bmi"
            android:icon="@drawable/bmi_ic"
            android:title="@string/bmi_calculator" />
        <item
            android:id="@+id/video"
            android:icon="@drawable/fitness_video_ic"
            android:title="@string/fitness_video" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_login"
            android:title="@string/login" />
    </group>
</menu>
