<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingBottom="80dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_gender_bmi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/textView_bmi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/con_genderSelect_bmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_gender_bmi">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/con_male_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="@drawable/select_gender_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/con_female_bmi"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView_male_bmi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/male_se"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_male_bmi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/male"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView_male_bmi"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/con_female_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="@drawable/un_select_gender_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/con_male_bmi"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView_female_bmi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/female_un"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_female_bmi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/female"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/textView_bmi"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView_female_bmi"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_height_bmi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:text="@string/height_cm"
                android:textColor="@color/textView_bmi"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/con_genderSelect_bmi" />

            <com.kevalpatel2106.rulerpicker.RulerValuePicker
                android:id="@+id/ruler_picker_height_bmi"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/holo_orange_dark"
                app:indicator_color="@android:color/white"
                app:indicator_interval="14dp"
                app:indicator_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_height_bmi"
                app:max_value="@integer/maxValue_height"
                app:min_value="@integer/minValue_height"
                app:notch_color="@color/white"
                app:ruler_text_size="6sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_weight_bmi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:text="@string/weight_kg"
                android:textColor="@color/textView_bmi"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ruler_picker_height_bmi" />

            <com.kevalpatel2106.rulerpicker.RulerValuePicker
                android:id="@+id/ruler_picker_weight_bmi"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:background="@android:color/transparent"
                app:indicator_color="@color/textView_bmi"
                app:indicator_interval="14dp"
                app:indicator_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_weight_bmi"
                app:max_value="@integer/maxValue_weight"
                app:min_value="@integer/minValue_weight"
                app:notch_color="@color/textView_bmi"
                app:ruler_text_color="@color/textView_bmi"
                app:ruler_text_size="6sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:text="@string/calculate_bmi"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/button_bg"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ruler_picker_weight_bmi" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>